--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -111,6 +111,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="cache.cs" />
+    <Compile Include="Configuration\ArtworkDownloadLimits.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\ArtworkDownloadLimits.Designer.cs">
+      <DependentUpon>ArtworkDownloadLimits.cs</DependentUpon>
+    </Compile>
     <Compile Include="Configuration\DeleteDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -285,6 +291,9 @@
     <EmbeddedResource Include="Configuration\About.resx">
       <DependentUpon>About.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\ArtworkDownloadLimits.resx">
+      <DependentUpon>ArtworkDownloadLimits.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Configuration\ChooseFromSelection.resx">
       <DependentUpon>ChooseFromSelection.cs</DependentUpon>
