--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -283,6 +283,9 @@
     </Compile>
     <Compile Include="settings.cs" />
     <Compile Include="Trakt\TraktAPI.cs" />
+    <Compile Include="Trakt\TraktError.cs" />
+    <Compile Include="Trakt\TraktURIs.cs" />
+    <Compile Include="Trakt\TraktUserProfile.cs" />
     <Compile Include="Trakt\TraktWatchedHistory.cs" />
     <Compile Include="Translation.cs" />
     <Compile Include="TVSeriesPlugin.cs" />
