--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -415,16 +415,14 @@
   <ItemGroup>
     <None Include="Resources\Images\busy.gif" />
     <None Include="Resources\Images\big_spinner.gif" />
-    <Content Include="Resources\Images\control_play_blue.png" />
     <None Include="Resources\Images\find.png" />
     <Content Include="Resources\Images\folder_explore.png" />
     <None Include="Resources\Images\importaccept.png" />
     <None Include="Resources\Images\importpending.png" />
     <None Include="Resources\Images\importupdating.png" />
     <None Include="Resources\Images\importignored.png" />
-    <Content Include="Resources\Images\television_add.png" />
-    <Content Include="Resources\Images\television_add_unlisted.png" />
-    <Content Include="Resources\Images\textfield_rename.png" />
+    <EmbeddedResource Include="Resources\Images\icon_normal.png" />
+    <EmbeddedResource Include="Resources\Images\icon_faded.png" />
     <None Include="Resources\Images\tick.png" />
     <None Include="Resources\Images\trakt.png" />
     <Content Include="Resources\Languages\cs.xml" />
