Tried to make the TraktAPI a little cleaner, removed most tvseries specific code but there is still some left behind. Should be a little less work to re-use somewhere else e.g. MyVideos/MyFilms etc.
Note: there is quite a bit of duplication in VideoPlayer and PlaylistPlayer...but think its a bit too much work to refactor that now, pretty easy to copy n paste for now :)

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -286,7 +286,7 @@
     <Compile Include="Trakt\TraktScrobble.cs" />
     <Compile Include="Trakt\TraktSeriesOverview.cs" />
     <Compile Include="Trakt\TraktAPI.cs" />
-    <Compile Include="Trakt\TraktError.cs" />
+    <Compile Include="Trakt\TraktResponse.cs" />
     <Compile Include="Trakt\TraktURIs.cs" />
     <Compile Include="Trakt\TraktUserProfile.cs" />
     <Compile Include="Trakt\TraktWatchedHistory.cs" />
