Changed behaviour of trakt scrobble, so that is watching a double episode it sends watched state after 50% rather than wait till end.

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -289,7 +289,7 @@
     <Compile Include="Trakt\TraktResponse.cs" />
     <Compile Include="Trakt\TraktURIs.cs" />
     <Compile Include="Trakt\TraktUserProfile.cs" />
-    <Compile Include="Trakt\TraktWatchedHistory.cs" />
+    <Compile Include="Trakt\TraktWatchedEpisodeHistory.cs" />
     <Compile Include="Translation.cs" />
     <Compile Include="TVSeriesPlugin.cs" />
     <Compile Include="VideoHandler.cs" />
