--- a/trunk/MP-TVSeries/MP-TVSeries.csproj
+++ b/trunk/MP-TVSeries/MP-TVSeries.csproj
@@ -282,14 +282,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="settings.cs" />
-    <Compile Include="Trakt\TraktLibraryShows.cs" />
-    <Compile Include="Trakt\TraktScrobble.cs" />
-    <Compile Include="Trakt\TraktSeriesOverview.cs" />
+    <Compile Include="Trakt\TraktExtensions.cs" />
+    <Compile Include="Trakt\User\TraktLibraryMovies.cs" />
+    <Compile Include="Trakt\User\TraktLibraryShows.cs" />
+    <Compile Include="Trakt\Show\TraktEpisodeScrobble.cs" />
+    <Compile Include="Trakt\Show\TraktSeriesOverview.cs" />
     <Compile Include="Trakt\TraktAPI.cs" />
     <Compile Include="Trakt\TraktResponse.cs" />
     <Compile Include="Trakt\TraktURIs.cs" />
-    <Compile Include="Trakt\TraktUserProfile.cs" />
-    <Compile Include="Trakt\TraktWatchedEpisodeHistory.cs" />
+    <Compile Include="Trakt\User\TraktUserProfile.cs" />
+    <Compile Include="Trakt\User\TraktWatchedEpisodeHistory.cs" />
+    <Compile Include="Trakt\User\TraktWatchedMovieHistory.cs" />
     <Compile Include="Translation.cs" />
     <Compile Include="TVSeriesPlugin.cs" />
     <Compile Include="VideoHandler.cs" />
