--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -284,6 +284,7 @@
     <Compile Include="settings.cs" />
     <Compile Include="TraktHandler.cs" />
     <Compile Include="Trakt\Movie\TraktMovieScrobble.cs" />
+    <Compile Include="Trakt\Common\TraktEpisode.cs" />
     <Compile Include="Trakt\Show\TraktSync.cs" />
     <Compile Include="Trakt\TraktExtensions.cs" />
     <Compile Include="Trakt\User\TraktLibraryMovies.cs" />
@@ -293,6 +294,7 @@
     <Compile Include="Trakt\TraktAPI.cs" />
     <Compile Include="Trakt\TraktResponse.cs" />
     <Compile Include="Trakt\TraktURIs.cs" />
+    <Compile Include="Trakt\User\TraktUserCalendar.cs" />
     <Compile Include="Trakt\User\TraktUserProfile.cs" />
     <Compile Include="Trakt\User\TraktWatchedEpisodeHistory.cs" />
     <Compile Include="Trakt\User\TraktWatchedMovieHistory.cs" />
