* Added support for full synchronization in config. still need to add progress bar & cancel button (and split to other thread).

--- a/branch/follwit/MP-TVSeries/MP-TVSeries.csproj
+++ b/branch/follwit/MP-TVSeries/MP-TVSeries.csproj
@@ -67,6 +67,10 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CookComputing.XmlRpcV2, Version=2.4.0.0, Culture=neutral, PublicKeyToken=a7d6e17aa302004d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\External\FollwitApi\External\CookComputing.XmlRpcV2.dll</HintPath>
+    </Reference>
     <Reference Include="Core, Version=1.1.0.16045, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\Core.dll</HintPath>
