Issue 141: Added GUI for series Actors. Requires updated skin support. Also added a new skin property to get the currently loaded fanart filename '#TVSeries.Current.Fanart'

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -147,6 +147,10 @@
     </Compile>
     <Compile Include="Cornerstone.MP\AsyncImageResource.cs" />
     <Compile Include="Cornerstone.MP\ImageSwapper.cs" />
+    <Compile Include="DB Classes\DBActor.cs" />
+    <Compile Include="GUI\GUIActors.cs" />
+    <Compile Include="GUI\GUIConnector.cs" />    
+    <Compile Include="Online Parsing Classes\GetActors.cs" />
     <Compile Include="SkinSettings.cs" />
     <Compile Include="Configuration\About.cs">
       <SubType>UserControl</SubType>
