--- a/trunk/MP-TVSeries/MP-TVSeries.csproj
+++ b/trunk/MP-TVSeries/MP-TVSeries.csproj
@@ -67,6 +67,9 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Common.Utils">
+      <HintPath>..\External\Common.Utils.dll</HintPath>
+    </Reference>
     <Reference Include="Core, Version=1.1.0.16045, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\Core.dll</HintPath>
