--- a/branch/MP11/MSI/MP-TVSeries/Dll/Setup/Setup/Setup.csproj
+++ b/branch/MP11/MSI/MP-TVSeries/Dll/Setup/Setup/Setup.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringHelper.cs" />
     <Compile Include="TVSeries\Database.cs" />
+    <Compile Include="Web.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
